// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots User/Avatar Default 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "height": "40xp",
      "verticalAlign": "middle",
      "width": "40px",
    }
  }
>
  <svg
    seed="some-user-uid"
    viewBox="-40 0 1060 1120"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="M501.71,209.52c-166.14,0-300.83,134.68-300.83,300.83V673.78c9.48,10.52,25.37,19.57,46,27.19L260.2,661.2l14.46,48.46c152.76,40.64,466.71,25.28,527.88-35.88V510.35C802.54,344.2,667.85,209.52,501.71,209.52Z"
        fill="#FEDC58"
      />
      <path
        d="M242.87,699.45c1.32.51,2.65,1,4,1.52L260.2,661.2l14.46,48.46c45.22,12,104.55,19.15,167.28,21.63l27.28-26.22L235.81,529.43S229.67,630.88,242.87,699.45Z"
        fill="#EDBF2E"
      />
      <path
        d="M617.2,552.78l25.31,170.76c34.8-4.34,66.62-10.27,93.11-17.73h0s33.09-36.89,29.52-176.38S617.2,552.78,617.2,552.78Z"
        fill="#EDBF2E"
      />
      <path
        d="M501.71,209.52c-166.14,0-300.83,134.68-300.83,300.83V673.78c9.48,10.52,25.37,19.57,46,27.19L260.2,661.2l14.46,48.46c152.76,40.64,466.71,25.28,527.88-35.88V510.35C802.54,344.2,667.85,209.52,501.71,209.52Z"
        fill="none"
        stroke="#592d3d"
        strokeMiterlimit={10}
        strokeWidth="12px"
      />
      <path
        d="M233.25,495C239.168,329.068 351.68,233.25 499,233.25C646.32,233.25 766.75,346.746 766.75,494.066C766.768,504.077 757.643,676.267 760.561,720.218C767.462,824.156 911.469,848.664 959.478,846.601C983.952,845.547 1002.67,866.735 1005.14,887.918C1007.65,909.451 993.383,930.981 951.307,929.164C764.522,921.101 711.947,816.61 700.846,823.351C675.489,838.731 756.698,912.706 809.101,930.901C870.832,952.34 804.307,1016.61 732.282,994.42C630.025,962.93 570.47,832.435 540.674,867.647C522.173,889.51 588.95,963.9 613.008,980.54C659.672,1012.81 606.157,1067.14 542.546,1028.63C444.848,969.51 441.595,876.876 417.22,883.656C393.533,890.235 402.013,912.001 322.956,967.61C243.903,1023.23 145.768,1035.81 127.011,1005.2C108.255,974.58 153.509,950.43 192.073,936.176C230.633,921.922 297.117,897.772 296.4,866.197C295.679,834.622 261.534,859.306 261.534,859.306C180.189,934.685 -48.726,938.58 -24.565,868.222C-12.404,832.814 12.457,834.289 47.113,835.764C81.308,837.218 125.041,838.676 175.502,804.689C214.699,778.293 233.39,709.516 234.6,637.523C235.063,609.971 230.808,563.466 233.25,495Z"
        fill="#9E55A1"
      />
      <path
        d="M93.223,837.942C93.223,837.942 164.984,815.38 176.782,807.434C258.919,752.122 233.698,570.283 232.311,506.052C232.268,504.04 232.247,502.021 232.25,500C232.25,352.68 351.68,233.25 499,233.25C564.366,233.25 624.241,256.762 670.614,295.778C666.976,296.884 662.537,297.109 657.186,296.28C594.447,286.557 522.565,269.906 406.78,343.45C290.995,416.994 317.087,570.339 268.191,713.318C219.375,856.063 93.223,837.942 93.223,837.942Z"
        fill="#893E97"
      />
      <g
        fill="#893E97"
        transform="translate(0 -70)"
      >
        <path
          d="M195.985,959.764C194.683,949.693 200.359,938.306 211.077,931.447C216.869,927.739 223.213,925.943 229.157,925.943C236.396,925.943 243.041,928.61 247.353,933.73C232.703,944.085 215.105,952.764 195.985,959.764Z"
        />
        <path
          d="M148.274,956.968C138.723,956.968 130.837,952.118 129.79,945.039C128.59,936.914 136.864,928.922 148.274,927.201C149.746,926.981 151.201,926.872 152.623,926.872C162.174,926.872 170.056,931.726 171.103,938.806C172.303,946.935 164.029,954.918 152.619,956.639C151.147,956.86 149.692,956.968 148.274,956.968Z"
        />
        <path
          d="M76.501,981.468C76.489,981.393 76.476,981.318 76.468,981.243C75.264,973.114 83.542,965.131 94.948,963.406C96.42,963.185 97.875,963.076 99.293,963.076C108.849,963.076 116.73,967.931 117.777,975.006C117.947,976.147 117.93,977.285 117.74,978.401C103.692,980.206 89.808,981.231 76.501,981.468Z"
        />
        <path
          d="M37.376,963.893C35.69,963.893 33.967,963.751 32.228,963.464C18.364,961.147 8.624,950.139 10.466,938.876C12.074,929.031 22.009,922.247 33.745,922.247C35.431,922.247 37.154,922.389 38.898,922.681C52.757,924.993 62.502,936.006 60.659,947.264C59.047,957.11 49.113,963.893 37.376,963.893Z"
        />
        <path
          d="M172.558,1084.48C172.336,1083.9 172.142,1083.31 171.977,1082.7C169.034,1071.68 177.641,1059.74 191.204,1056.04C193.941,1055.3 196.67,1054.94 199.308,1054.94C209.741,1054.94 218.74,1060.5 221.094,1069.29C221.845,1072.1 221.845,1074.96 221.206,1077.74C203.455,1082.23 186.855,1084.47 172.558,1084.48Z"
        />
        <path
          d="M464.581,1015.21C454.04,998.76 446.661,983.472 440.577,971.493C440.903,971.214 441.241,970.939 441.595,970.68C444.642,968.426 448.249,967.356 452.008,967.356C459.498,967.356 467.594,971.605 473.118,979.235C481.404,990.697 480.736,1005.45 471.622,1012.19C469.503,1013.76 467.108,1014.75 464.581,1015.21Z"
        />
        <path
          d="M536.976,1054.38C531.35,1054.38 525.278,1052.41 519.943,1048.43C508.64,1040 504.913,1025.71 511.62,1016.53C515.161,1011.69 520.9,1009.23 527.194,1009.23C532.825,1009.23 538.897,1011.19 544.232,1015.18C555.535,1023.61 559.258,1037.89 552.551,1047.07C549.009,1051.92 543.271,1054.38 536.976,1054.38Z"
        />
        <path
          d="M579.634,1104.61C568.215,1103.53 555.593,1099.53 542.546,1091.63C539.536,1089.81 536.605,1087.96 533.769,1086.07C534.227,1085.11 534.775,1084.18 535.418,1083.29C538.959,1078.45 544.702,1075.99 550.992,1075.99C556.623,1075.99 562.691,1077.95 568.03,1081.94C575.978,1087.87 580.174,1096.69 579.634,1104.61Z"
        />
        <path
          d="M614.661,974.493C602.117,961.726 590.945,949.935 581.048,941.03C581.559,939.806 582.21,938.635 583.014,937.535C586.551,932.689 592.293,930.231 598.584,930.231C604.215,930.231 610.283,932.197 615.621,936.18C626.925,944.614 630.647,958.893 623.94,968.076C621.632,971.239 618.383,973.385 614.661,974.493Z"
        />
        <path
          d="M676.409,990.985C671.062,990.985 664.594,988.705 658.695,984.301C648.27,976.522 643.583,965.068 648.225,958.714C650.24,955.955 653.682,954.61 657.784,954.61C663.135,954.61 669.603,956.893 675.502,961.293C685.931,969.072 690.614,980.531 685.972,986.885C683.957,989.643 680.514,990.985 676.409,990.985Z"
        />
        <path
          d="M707.474,1047.58C693.17,1040.63 679.814,1031.96 667.348,1022.44C667.715,1021.63 668.164,1020.85 668.704,1020.11C671.536,1016.24 676.219,1014.3 681.504,1014.3C686.838,1014.3 692.791,1016.27 698.08,1020.22C708.175,1027.75 712.186,1039.73 707.474,1047.58Z"
        />
        <path
          d="M760.396,1047.68C757.036,1047.68 753.475,1047.07 749.938,1045.77C737.633,1041.27 730.307,1030.24 733.572,1021.12C735.897,1014.63 742.975,1010.86 751.302,1010.86C754.662,1010.86 758.224,1011.47 761.761,1012.77C774.061,1017.27 781.391,1028.31 778.126,1037.42C775.797,1043.91 768.723,1047.68 760.396,1047.68Z"
        />
        <path
          d="M779.676,930.235C775.686,930.235 771.419,929.497 767.173,927.943C752.988,922.755 744.406,910.422 747.996,900.397C750.511,893.372 758.335,889.347 767.668,889.347C771.658,889.347 775.925,890.081 780.175,891.635C794.351,896.822 802.934,909.156 799.343,919.185C796.829,926.205 789.009,930.235 779.676,930.235Z"
        />
        <path
          d="M856.251,977.876C839.824,973.356 825.058,968.051 811.772,962.297C811.912,961.901 812.069,961.51 812.246,961.122C814.847,955.46 821.121,952.364 828.426,952.364C832.466,952.364 836.819,953.31 841.044,955.297C851.42,960.168 857.571,969.685 856.251,977.876Z"
        />
        <path
          d="M908.122,953.364C907.314,953.364 906.498,953.331 905.673,953.268C892.627,952.276 882.634,943.635 883.355,933.964C884.031,924.914 893.867,918.168 905.834,918.168C906.642,918.168 907.458,918.201 908.283,918.264C921.33,919.255 931.322,927.897 930.605,937.564C929.929,946.618 920.089,953.364 908.122,953.364Z"
        />
        <path
          d="M956.188,992.272C954.605,992.272 952.977,992.239 951.307,992.164C944.345,991.864 937.547,991.426 930.951,990.868C930.675,989.614 930.576,988.322 930.675,987.014C931.347,977.96 941.183,971.218 953.15,971.218C953.958,971.218 954.774,971.247 955.599,971.31C968.134,972.264 977.851,980.28 977.954,989.476C971.857,991.268 964.635,992.272 956.188,992.272Z"
        />
        <path
          d="M264.498,1039.8C258.966,1039.8 254.147,1037.74 251.463,1033.65C246.331,1025.85 250.948,1013.63 261.777,1006.35C266.946,1002.88 272.598,1001.16 277.648,1001.16C283.18,1001.16 287.995,1003.22 290.678,1007.3C295.811,1015.1 291.194,1027.33 280.364,1034.61C275.199,1038.08 269.548,1039.8 264.498,1039.8Z"
        />
        <path
          d="M330.458,1025.25C325.755,1017.44 330.397,1005.51 341.036,998.364C346.201,994.889 351.849,993.168 356.903,993.168C360.613,993.168 364.006,994.097 366.644,995.943C357.509,1004.37 345.806,1014.09 330.458,1025.25Z"
        />
        <path
          d="M366.578,974.689C364.245,974.689 362.01,974.122 360.015,972.926C352.043,968.151 350.959,955.11 357.595,943.805C362.571,935.326 370.473,930.231 377.477,930.231C379.815,930.231 382.049,930.797 384.04,931.993C392.012,936.768 393.096,949.81 386.464,961.114C381.488,969.593 373.582,974.689 366.578,974.689Z"
        />
      </g>
      <path
        d="M233.25,495C239.168,329.068 351.68,233.25 499,233.25C646.32,233.25 766.75,346.746 766.75,494.066C766.768,504.077 757.643,676.267 760.561,720.218C767.462,824.156 911.469,848.664 959.478,846.601C983.952,845.547 1002.67,866.735 1005.14,887.918C1007.65,909.451 993.383,930.981 951.307,929.164C764.522,921.101 711.947,816.61 700.846,823.351C675.489,838.731 756.698,912.706 809.101,930.901C870.832,952.34 804.307,1016.61 732.282,994.42C630.025,962.93 570.47,832.435 540.674,867.647C522.173,889.51 588.95,963.9 613.008,980.54C659.672,1012.81 606.157,1067.14 542.546,1028.63C444.848,969.51 441.595,876.876 417.22,883.656C393.533,890.235 402.013,912.001 322.956,967.61C243.903,1023.23 145.768,1035.81 127.011,1005.2C108.255,974.58 153.509,950.43 192.073,936.176C230.633,921.922 297.117,897.772 296.4,866.197C295.679,834.622 261.534,859.306 261.534,859.306C180.189,934.685 -48.726,938.58 -24.565,868.222C-12.404,832.814 12.457,834.289 47.113,835.764C81.308,837.218 125.041,838.676 175.502,804.689C214.699,778.293 233.39,709.516 234.6,637.523C235.063,609.971 230.808,563.466 233.25,495Z"
        fill="none"
        stroke="#592d3d"
        strokeMiterlimit={10}
        strokeWidth="12px"
      />
      <path
        d="M703.51,506.11V519a49.59,49.59,0,0,1-1.94,25.32,45.67,45.67,0,0,1-3.51,7.65c-3.35,8.71-12.35,15.71-21.35,18.71-14,4-31,2-42-9-14-15-12-37-12.45-55.62"
        fill="none"
        stroke="#592d3d"
        strokeLinecap="round"
        strokeMiterlimit={10}
        strokeWidth="12px"
      />
      <path
        d="M376.69,505.7c2.34,26.61-1.66,63.61-36.13,67.17a45.89,45.89,0,0,1-8.12,0A43.6,43.6,0,0,1,310,564.31c-18-15-14-39-13.95-58.62"
        fill="none"
        stroke="#592d3d"
        strokeLinecap="round"
        strokeMiterlimit={10}
        strokeWidth="12px"
      />
      <path
        d="M538.71,665.74c-15.55,0-25.12-12.76-36.48-12.76S476.31,665.74,461,665.74s-23.73-11.11-23.73-26.51c0-16.65,16.75-46.06,62.61-46.06s65.39,27.74,65.39,45.46C565.23,655,554.27,665.74,538.71,665.74Z"
        fill="#592d3d"
        stroke="#592d3d"
        strokeMiterlimit={10}
        strokeWidth="12px"
      />
      <path
        d="M511.14,655.25C506.58,643,491,635,473.29,636.57c-14.79,1.34-26.93,9.09-31.84,19.1,3.92,6.26,10.51,10.07,19.51,10.07,15.35,0,29.9-12.76,41.27-12.76A21.5,21.5,0,0,1,511.14,655.25Z"
        fill="#f28195"
      />
      <path
        d="M455.06,628.66l.87-.35.73-.25c.47-.16.94-.28,1.41-.4a21.33,21.33,0,0,1,2.85-.53,24.24,24.24,0,0,1,5.84-.07,21.24,21.24,0,0,1,11.15,4.48,20.07,20.07,0,0,1,6.55,9.27,17.31,17.31,0,0,1,.2,10.44c-2.5-2.58-4.46-4.94-6.43-6.88a27.89,27.89,0,0,0-2.88-2.58,13.78,13.78,0,0,0-3-1.72,15.18,15.18,0,0,0-6.35-1.15,29.08,29.08,0,0,0-3.43.3c-.57.1-1.16.19-1.72.31l-.84.19-.39.08c-.09,0-.29.08-.22,0Z"
        fill="#592d3d"
      />
      <rect
        fill="#893E97"
        height="64.15"
        width="439.24"
        x="290.23"
        y="414.02"
      />
      <path
        d="M710,667.66q-4.71,5.82-9.71,11.37C697.79,681.8,702.87,677.91,710,667.66Zm15-316.55C694.5,296.7,641.5,259.24,580.22,242l-6.35-1.71c-22.7-6.28-46.62-7-71.32-7-26.69,0-52.46,2.74-76.77,10l-4.26,1.27A283.11,283.11,0,0,0,332.67,294q-4.37,3.58-8.57,7.32c-28.34,23.69-50.34,53.69-65.47,87.9q-2.2,4.92-4.16,9.93a212.31,212.31,0,0,0-9.41,30.61C213,556.34,262.89,634,307.17,681.6c4.37,4.7-57.93-101.85-17.42-216,7.73-.29,20.24-.51,36.19-.67l15.5-50.61,17.44,50.38c27.4-.13,59.88-.15,93.88-.12l12.32-52.36L479,464.6c74.37.14,151.44.52,195.28.77l13.2-52.17,15,52.33,8.21.05C760.78,572,728.5,641.13,710,667.66A265.62,265.62,0,0,0,769.3,500C769.3,413.58,725,351.11,725,351.11Z"
        fill="#FEDC58"
      />
      <path
        d="M710,667.66q-4.71,5.82-9.71,11.37C697.79,681.8,702.87,677.91,710,667.66Zm15-316.55C694.5,296.7,641.5,259.24,580.22,242l-6.35-1.71c-22.7-6.28-46.62-7-71.32-7-26.69,0-52.46,2.74-76.77,10l-4.26,1.27A283.11,283.11,0,0,0,332.67,294q-4.37,3.58-8.57,7.32c-28.34,23.69-50.34,53.69-65.47,87.9q-2.2,4.92-4.16,9.93a212.31,212.31,0,0,0-9.41,30.61C213,556.34,262.89,634,307.17,681.6c4.37,4.7-57.93-101.85-17.42-216,7.73-.29,20.24-.51,36.19-.67l15.5-50.61,17.44,50.38c27.4-.13,59.88-.15,93.88-.12l12.32-52.36L479,464.6c74.37.14,151.44.52,195.28.77l13.2-52.17,15,52.33,8.21.05C760.78,572,728.5,641.13,710,667.66A265.62,265.62,0,0,0,769.3,500C769.3,413.58,725,351.11,725,351.11Z"
        fill="none"
        stroke="#592d3d"
        strokeMiterlimit={10}
        strokeWidth="12px"
      />
      <path
        d="M584.15,228l-6.47-1.74c-25.21-7-50.93-7.55-75.13-7.55-30.59,0-57.07,3.49-80.91,10.64l-4.26,1.27-.49.15a299.89,299.89,0,0,0-93.42,52c-3,2.46-6,5-8.84,7.55-29.63,24.82-52.93,56.11-69.24,93-1.56,3.49-3,7.05-4.42,10.57-4.18,10.69-21.29,59.77-23.75,70.65l72.53,1c7.73-.29,20.24-.51,36.19-.67l15.5-50.61,17.44,50.38c27.4-.13,59.88-.15,93.88-.12l12.32-52.36L479,464.6c74.37.14,151.44.52,195.28.77l13.2-52.17,15,52.33,8.21.05L783.8,500c0-86.19-41.3-149-46.48-156.6C706,288,651.63,247,584.15,228ZM750.31,547.25c-3.17-25.92-11.17-55.26-26.51-87.84l-3.89-8.27-6.49,0-26.78-93.63L663,450.81c-40.43-.22-107.06-.54-172.86-.69l-25.95-97.57-22.94,97.5c-27.4,0-51.55,0-72.09.09L340.6,367.53l-25.42,83c-11.45.15-20.16.34-26,.56l-9.83.38-3.29,9.26C261.72,501.22,257.92,545,264.76,591c-15.9-40-22.46-91.39-5.65-157.63l.09-.38A197.7,197.7,0,0,1,268,404.47c1.2-3.09,2.51-6.22,3.91-9.35,14.54-32.86,35.24-60.67,61.51-82.63l.33-.29c2.65-2.35,5.39-4.69,8.14-6.95a270.41,270.41,0,0,1,84-46.87l4.05-1.2c21.12-6.34,44.87-9.43,72.6-9.43,22.22,0,45.73.51,67.45,6.52l6.38,1.71c60.24,17,108.53,53.27,136,102.23l.37.66.44.63c.42.59,41.61,59.63,41.61,140.5A252.08,252.08,0,0,1,750.31,547.25Z"
        fill="#FEDC58"
      />
      <path
        d="M710,667.66q-4.71,5.82-9.71,11.37C697.79,681.8,702.87,677.91,710,667.66ZM307.17,681.6c4.37,4.7-57.93-101.85-17.42-216,7.73-.29,20.24-.51,36.19-.67l15.5-50.61,17.44,50.38c27.4-.13,59.88-.15,93.88-.12l12.32-52.36L479,464.6c74.37.14,151.44.52,195.28.77l13.2-52.17,15,52.33,8.21.05C760.78,572,728.5,641.13,710,667.66"
        fill="none"
        stroke="#592d3d"
        strokeMiterlimit={10}
        strokeWidth="12px"
      />
      <path
        d="M284.48,462.85c.18-.75.33-1.32.53-1.94s.4-1.2.62-1.78c.46-1.17,1-2.31,1.51-3.42a48.48,48.48,0,0,1,3.85-6.42,37.51,37.51,0,0,1,4.88-5.75,17,17,0,0,1,7-4,31,31,0,0,1-.87,7.68c-.28,1.14-.59,2.25-.93,3.32l-1,3.25q-1,3.23-2,6.39c-.33,1.06-.68,2.09-1,3.13-.17.51-.37,1-.56,1.53s-.39,1-.56,1.4Z"
        fill="#592d3d"
      />
      <path
        d="M710.68,459.58a35,35,0,0,1,6.23.06,60.73,60.73,0,0,1,6.24.86c1,.2,2.08.4,3.12.64a25.74,25.74,0,0,1,3.11.86,18.53,18.53,0,0,1,6.24,3.58,18.74,18.74,0,0,1-6.24,3.59,25.68,25.68,0,0,1-3.11.85c-1,.25-2.08.45-3.12.65q-3.12.58-6.24.86a35,35,0,0,1-6.23.05Z"
        fill="#592d3d"
      />
      <path
        d="M444.84,452.07a134.88,134.88,0,0,1,1.49-14.25c.72-4.7,1.6-9.37,2.61-14s2.15-9.25,3.44-13.83A132.09,132.09,0,0,1,457,396.4a131.77,131.77,0,0,1-1.5,14.25q-1.08,7.05-2.61,14t-3.44,13.83A137,137,0,0,1,444.84,452.07Z"
        fill="#ffffff"
      />
      <path
        d="M668,452.07a134.88,134.88,0,0,1,1.49-14.25q1.09-7.05,2.61-14T675.49,410a132.09,132.09,0,0,1,4.57-13.58,131.76,131.76,0,0,1-1.49,14.25q-1.1,7.05-2.61,14c-1,4.64-2.16,9.25-3.45,13.83A134.48,134.48,0,0,1,668,452.07Z"
        fill="#ffffff"
      />
      <path
        d="M237.55,468.26a143,143,0,0,1,11.42-38"
        fill="#FEDC58"
      />
      <path
        d="M231.6,467.51c.09-1,.18-1.85.32-2.73s.29-1.72.46-2.58c.35-1.7.75-3.38,1.23-5a78.48,78.48,0,0,1,3.47-9.75,66.09,66.09,0,0,1,4.7-9.22,29.18,29.18,0,0,1,7.19-7.91,50.46,50.46,0,0,1-.48,10.43c-.25,1.63-.51,3.25-.83,4.84s-.58,3.19-.83,4.78l-1.63,9.49-.83,4.68c-.12.78-.28,1.56-.42,2.32s-.3,1.57-.44,2.19Z"
        fill="#592d3d"
      />
      <path
        d="M769.33,496s-.46-20.78-8.37-47.63"
        fill="#FEDC58"
      />
      <path
        d="M763.33,496.12l-.24-2.76c-.08-1-.16-1.93-.22-2.89l-.45-5.84-.91-11.8c-.3-3.95-.71-7.91-1-11.93-.08-2-.16-4.06-.1-6.14a47.58,47.58,0,0,1,.5-6.4,42.78,42.78,0,0,1,6.58,10.89,62.13,62.13,0,0,1,2.17,5.84c.67,2,1.24,4,1.81,6a111.89,111.89,0,0,1,2.69,12.17c.33,2.05.63,4.12.81,6.21q.16,1.56.24,3.15c.06,1.07.08,2.07.07,3.28Z"
        fill="#592d3d"
      />
      <path
        d="M506.7,235.5a369.62,369.62,0,0,0-42.48,4.93c-3.48.68-7,1.42-10.44,2.06s-6.9,1.61-10.35,2.41l-10.26,2.72c-3.4,1-6.77,2.08-10.15,3.12a314.87,314.87,0,0,0-39.44,15.73,348.17,348.17,0,0,0-37.24,21,183.41,183.41,0,0,1,35.08-25.14A219.23,219.23,0,0,1,421.18,245c3.48-1,6.94-2.09,10.42-3.05s7-1.82,10.55-2.6,7.1-1.4,10.65-2,7.16-1.07,10.74-1.52A190,190,0,0,1,506.7,235.5Z"
        fill="#ffffff"
      />
      <path
        d="M255.06,519.62l13-4.4,31.2-10.54,37.6-12.7,32.49-11c5.27-1.78,10.55-3.51,15.8-5.34l.23-.07a10.6,10.6,0,0,0,6-4.6,10,10,0,0,0-3.58-13.68,10,10,0,0,0-7.71-1l-13,4.39-31.2,10.54-37.6,12.71-32.49,11c-5.27,1.78-10.55,3.52-15.8,5.34l-.23.08a10.6,10.6,0,0,0-6,4.6,10,10,0,0,0,3.58,13.68,10,10,0,0,0,7.71,1Z"
        fill="#592d3d"
      />
      <path
        d="M617.56,475l12.73,5.13,30.54,12.31,36.81,14.84,31.81,12.83c5.15,2.07,10.26,4.3,15.47,6.24l.22.08c2.25.91,5.71.16,7.71-1a10,10,0,0,0,3.58-13.69l-1.56-2a10,10,0,0,0-4.41-2.57L737.73,502l-30.54-12.32-36.81-14.84L638.57,462c-5.15-2.08-10.26-4.31-15.47-6.24l-.22-.09c-2.25-.91-5.71-.16-7.71,1a10,10,0,0,0-3.58,13.68l1.56,2a10.07,10.07,0,0,0,4.41,2.58Z"
        fill="#592d3d"
      />
    </g>
  </svg>
</div>
`;

exports[`Storyshots User/Avatar Nice Preview 1`] = `
<div
  className="ui card"
  onClick={[Function]}
  style={
    Object {
      "margin": 20,
    }
  }
>
  <div
    style={
      Object {
        "display": "inline-block",
        "height": 308,
        "margin": "0 auto",
        "verticalAlign": "middle",
        "width": 260,
      }
    }
  >
    <svg
      seed="some-user-uid"
      viewBox="-40 0 1060 1120"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M501.71,209.52c-166.14,0-300.83,134.68-300.83,300.83V673.78c9.48,10.52,25.37,19.57,46,27.19L260.2,661.2l14.46,48.46c152.76,40.64,466.71,25.28,527.88-35.88V510.35C802.54,344.2,667.85,209.52,501.71,209.52Z"
          fill="#FEDC58"
        />
        <path
          d="M242.87,699.45c1.32.51,2.65,1,4,1.52L260.2,661.2l14.46,48.46c45.22,12,104.55,19.15,167.28,21.63l27.28-26.22L235.81,529.43S229.67,630.88,242.87,699.45Z"
          fill="#EDBF2E"
        />
        <path
          d="M617.2,552.78l25.31,170.76c34.8-4.34,66.62-10.27,93.11-17.73h0s33.09-36.89,29.52-176.38S617.2,552.78,617.2,552.78Z"
          fill="#EDBF2E"
        />
        <path
          d="M501.71,209.52c-166.14,0-300.83,134.68-300.83,300.83V673.78c9.48,10.52,25.37,19.57,46,27.19L260.2,661.2l14.46,48.46c152.76,40.64,466.71,25.28,527.88-35.88V510.35C802.54,344.2,667.85,209.52,501.71,209.52Z"
          fill="none"
          stroke="#592d3d"
          strokeMiterlimit={10}
          strokeWidth="12px"
        />
        <path
          d="M233.25,495C239.168,329.068 351.68,233.25 499,233.25C646.32,233.25 766.75,346.746 766.75,494.066C766.768,504.077 757.643,676.267 760.561,720.218C767.462,824.156 911.469,848.664 959.478,846.601C983.952,845.547 1002.67,866.735 1005.14,887.918C1007.65,909.451 993.383,930.981 951.307,929.164C764.522,921.101 711.947,816.61 700.846,823.351C675.489,838.731 756.698,912.706 809.101,930.901C870.832,952.34 804.307,1016.61 732.282,994.42C630.025,962.93 570.47,832.435 540.674,867.647C522.173,889.51 588.95,963.9 613.008,980.54C659.672,1012.81 606.157,1067.14 542.546,1028.63C444.848,969.51 441.595,876.876 417.22,883.656C393.533,890.235 402.013,912.001 322.956,967.61C243.903,1023.23 145.768,1035.81 127.011,1005.2C108.255,974.58 153.509,950.43 192.073,936.176C230.633,921.922 297.117,897.772 296.4,866.197C295.679,834.622 261.534,859.306 261.534,859.306C180.189,934.685 -48.726,938.58 -24.565,868.222C-12.404,832.814 12.457,834.289 47.113,835.764C81.308,837.218 125.041,838.676 175.502,804.689C214.699,778.293 233.39,709.516 234.6,637.523C235.063,609.971 230.808,563.466 233.25,495Z"
          fill="#9E55A1"
        />
        <path
          d="M93.223,837.942C93.223,837.942 164.984,815.38 176.782,807.434C258.919,752.122 233.698,570.283 232.311,506.052C232.268,504.04 232.247,502.021 232.25,500C232.25,352.68 351.68,233.25 499,233.25C564.366,233.25 624.241,256.762 670.614,295.778C666.976,296.884 662.537,297.109 657.186,296.28C594.447,286.557 522.565,269.906 406.78,343.45C290.995,416.994 317.087,570.339 268.191,713.318C219.375,856.063 93.223,837.942 93.223,837.942Z"
          fill="#893E97"
        />
        <g
          fill="#893E97"
          transform="translate(0 -70)"
        >
          <path
            d="M195.985,959.764C194.683,949.693 200.359,938.306 211.077,931.447C216.869,927.739 223.213,925.943 229.157,925.943C236.396,925.943 243.041,928.61 247.353,933.73C232.703,944.085 215.105,952.764 195.985,959.764Z"
          />
          <path
            d="M148.274,956.968C138.723,956.968 130.837,952.118 129.79,945.039C128.59,936.914 136.864,928.922 148.274,927.201C149.746,926.981 151.201,926.872 152.623,926.872C162.174,926.872 170.056,931.726 171.103,938.806C172.303,946.935 164.029,954.918 152.619,956.639C151.147,956.86 149.692,956.968 148.274,956.968Z"
          />
          <path
            d="M76.501,981.468C76.489,981.393 76.476,981.318 76.468,981.243C75.264,973.114 83.542,965.131 94.948,963.406C96.42,963.185 97.875,963.076 99.293,963.076C108.849,963.076 116.73,967.931 117.777,975.006C117.947,976.147 117.93,977.285 117.74,978.401C103.692,980.206 89.808,981.231 76.501,981.468Z"
          />
          <path
            d="M37.376,963.893C35.69,963.893 33.967,963.751 32.228,963.464C18.364,961.147 8.624,950.139 10.466,938.876C12.074,929.031 22.009,922.247 33.745,922.247C35.431,922.247 37.154,922.389 38.898,922.681C52.757,924.993 62.502,936.006 60.659,947.264C59.047,957.11 49.113,963.893 37.376,963.893Z"
          />
          <path
            d="M172.558,1084.48C172.336,1083.9 172.142,1083.31 171.977,1082.7C169.034,1071.68 177.641,1059.74 191.204,1056.04C193.941,1055.3 196.67,1054.94 199.308,1054.94C209.741,1054.94 218.74,1060.5 221.094,1069.29C221.845,1072.1 221.845,1074.96 221.206,1077.74C203.455,1082.23 186.855,1084.47 172.558,1084.48Z"
          />
          <path
            d="M464.581,1015.21C454.04,998.76 446.661,983.472 440.577,971.493C440.903,971.214 441.241,970.939 441.595,970.68C444.642,968.426 448.249,967.356 452.008,967.356C459.498,967.356 467.594,971.605 473.118,979.235C481.404,990.697 480.736,1005.45 471.622,1012.19C469.503,1013.76 467.108,1014.75 464.581,1015.21Z"
          />
          <path
            d="M536.976,1054.38C531.35,1054.38 525.278,1052.41 519.943,1048.43C508.64,1040 504.913,1025.71 511.62,1016.53C515.161,1011.69 520.9,1009.23 527.194,1009.23C532.825,1009.23 538.897,1011.19 544.232,1015.18C555.535,1023.61 559.258,1037.89 552.551,1047.07C549.009,1051.92 543.271,1054.38 536.976,1054.38Z"
          />
          <path
            d="M579.634,1104.61C568.215,1103.53 555.593,1099.53 542.546,1091.63C539.536,1089.81 536.605,1087.96 533.769,1086.07C534.227,1085.11 534.775,1084.18 535.418,1083.29C538.959,1078.45 544.702,1075.99 550.992,1075.99C556.623,1075.99 562.691,1077.95 568.03,1081.94C575.978,1087.87 580.174,1096.69 579.634,1104.61Z"
          />
          <path
            d="M614.661,974.493C602.117,961.726 590.945,949.935 581.048,941.03C581.559,939.806 582.21,938.635 583.014,937.535C586.551,932.689 592.293,930.231 598.584,930.231C604.215,930.231 610.283,932.197 615.621,936.18C626.925,944.614 630.647,958.893 623.94,968.076C621.632,971.239 618.383,973.385 614.661,974.493Z"
          />
          <path
            d="M676.409,990.985C671.062,990.985 664.594,988.705 658.695,984.301C648.27,976.522 643.583,965.068 648.225,958.714C650.24,955.955 653.682,954.61 657.784,954.61C663.135,954.61 669.603,956.893 675.502,961.293C685.931,969.072 690.614,980.531 685.972,986.885C683.957,989.643 680.514,990.985 676.409,990.985Z"
          />
          <path
            d="M707.474,1047.58C693.17,1040.63 679.814,1031.96 667.348,1022.44C667.715,1021.63 668.164,1020.85 668.704,1020.11C671.536,1016.24 676.219,1014.3 681.504,1014.3C686.838,1014.3 692.791,1016.27 698.08,1020.22C708.175,1027.75 712.186,1039.73 707.474,1047.58Z"
          />
          <path
            d="M760.396,1047.68C757.036,1047.68 753.475,1047.07 749.938,1045.77C737.633,1041.27 730.307,1030.24 733.572,1021.12C735.897,1014.63 742.975,1010.86 751.302,1010.86C754.662,1010.86 758.224,1011.47 761.761,1012.77C774.061,1017.27 781.391,1028.31 778.126,1037.42C775.797,1043.91 768.723,1047.68 760.396,1047.68Z"
          />
          <path
            d="M779.676,930.235C775.686,930.235 771.419,929.497 767.173,927.943C752.988,922.755 744.406,910.422 747.996,900.397C750.511,893.372 758.335,889.347 767.668,889.347C771.658,889.347 775.925,890.081 780.175,891.635C794.351,896.822 802.934,909.156 799.343,919.185C796.829,926.205 789.009,930.235 779.676,930.235Z"
          />
          <path
            d="M856.251,977.876C839.824,973.356 825.058,968.051 811.772,962.297C811.912,961.901 812.069,961.51 812.246,961.122C814.847,955.46 821.121,952.364 828.426,952.364C832.466,952.364 836.819,953.31 841.044,955.297C851.42,960.168 857.571,969.685 856.251,977.876Z"
          />
          <path
            d="M908.122,953.364C907.314,953.364 906.498,953.331 905.673,953.268C892.627,952.276 882.634,943.635 883.355,933.964C884.031,924.914 893.867,918.168 905.834,918.168C906.642,918.168 907.458,918.201 908.283,918.264C921.33,919.255 931.322,927.897 930.605,937.564C929.929,946.618 920.089,953.364 908.122,953.364Z"
          />
          <path
            d="M956.188,992.272C954.605,992.272 952.977,992.239 951.307,992.164C944.345,991.864 937.547,991.426 930.951,990.868C930.675,989.614 930.576,988.322 930.675,987.014C931.347,977.96 941.183,971.218 953.15,971.218C953.958,971.218 954.774,971.247 955.599,971.31C968.134,972.264 977.851,980.28 977.954,989.476C971.857,991.268 964.635,992.272 956.188,992.272Z"
          />
          <path
            d="M264.498,1039.8C258.966,1039.8 254.147,1037.74 251.463,1033.65C246.331,1025.85 250.948,1013.63 261.777,1006.35C266.946,1002.88 272.598,1001.16 277.648,1001.16C283.18,1001.16 287.995,1003.22 290.678,1007.3C295.811,1015.1 291.194,1027.33 280.364,1034.61C275.199,1038.08 269.548,1039.8 264.498,1039.8Z"
          />
          <path
            d="M330.458,1025.25C325.755,1017.44 330.397,1005.51 341.036,998.364C346.201,994.889 351.849,993.168 356.903,993.168C360.613,993.168 364.006,994.097 366.644,995.943C357.509,1004.37 345.806,1014.09 330.458,1025.25Z"
          />
          <path
            d="M366.578,974.689C364.245,974.689 362.01,974.122 360.015,972.926C352.043,968.151 350.959,955.11 357.595,943.805C362.571,935.326 370.473,930.231 377.477,930.231C379.815,930.231 382.049,930.797 384.04,931.993C392.012,936.768 393.096,949.81 386.464,961.114C381.488,969.593 373.582,974.689 366.578,974.689Z"
          />
        </g>
        <path
          d="M233.25,495C239.168,329.068 351.68,233.25 499,233.25C646.32,233.25 766.75,346.746 766.75,494.066C766.768,504.077 757.643,676.267 760.561,720.218C767.462,824.156 911.469,848.664 959.478,846.601C983.952,845.547 1002.67,866.735 1005.14,887.918C1007.65,909.451 993.383,930.981 951.307,929.164C764.522,921.101 711.947,816.61 700.846,823.351C675.489,838.731 756.698,912.706 809.101,930.901C870.832,952.34 804.307,1016.61 732.282,994.42C630.025,962.93 570.47,832.435 540.674,867.647C522.173,889.51 588.95,963.9 613.008,980.54C659.672,1012.81 606.157,1067.14 542.546,1028.63C444.848,969.51 441.595,876.876 417.22,883.656C393.533,890.235 402.013,912.001 322.956,967.61C243.903,1023.23 145.768,1035.81 127.011,1005.2C108.255,974.58 153.509,950.43 192.073,936.176C230.633,921.922 297.117,897.772 296.4,866.197C295.679,834.622 261.534,859.306 261.534,859.306C180.189,934.685 -48.726,938.58 -24.565,868.222C-12.404,832.814 12.457,834.289 47.113,835.764C81.308,837.218 125.041,838.676 175.502,804.689C214.699,778.293 233.39,709.516 234.6,637.523C235.063,609.971 230.808,563.466 233.25,495Z"
          fill="none"
          stroke="#592d3d"
          strokeMiterlimit={10}
          strokeWidth="12px"
        />
        <path
          d="M703.51,506.11V519a49.59,49.59,0,0,1-1.94,25.32,45.67,45.67,0,0,1-3.51,7.65c-3.35,8.71-12.35,15.71-21.35,18.71-14,4-31,2-42-9-14-15-12-37-12.45-55.62"
          fill="none"
          stroke="#592d3d"
          strokeLinecap="round"
          strokeMiterlimit={10}
          strokeWidth="12px"
        />
        <path
          d="M376.69,505.7c2.34,26.61-1.66,63.61-36.13,67.17a45.89,45.89,0,0,1-8.12,0A43.6,43.6,0,0,1,310,564.31c-18-15-14-39-13.95-58.62"
          fill="none"
          stroke="#592d3d"
          strokeLinecap="round"
          strokeMiterlimit={10}
          strokeWidth="12px"
        />
        <path
          d="M538.71,665.74c-15.55,0-25.12-12.76-36.48-12.76S476.31,665.74,461,665.74s-23.73-11.11-23.73-26.51c0-16.65,16.75-46.06,62.61-46.06s65.39,27.74,65.39,45.46C565.23,655,554.27,665.74,538.71,665.74Z"
          fill="#592d3d"
          stroke="#592d3d"
          strokeMiterlimit={10}
          strokeWidth="12px"
        />
        <path
          d="M511.14,655.25C506.58,643,491,635,473.29,636.57c-14.79,1.34-26.93,9.09-31.84,19.1,3.92,6.26,10.51,10.07,19.51,10.07,15.35,0,29.9-12.76,41.27-12.76A21.5,21.5,0,0,1,511.14,655.25Z"
          fill="#f28195"
        />
        <path
          d="M455.06,628.66l.87-.35.73-.25c.47-.16.94-.28,1.41-.4a21.33,21.33,0,0,1,2.85-.53,24.24,24.24,0,0,1,5.84-.07,21.24,21.24,0,0,1,11.15,4.48,20.07,20.07,0,0,1,6.55,9.27,17.31,17.31,0,0,1,.2,10.44c-2.5-2.58-4.46-4.94-6.43-6.88a27.89,27.89,0,0,0-2.88-2.58,13.78,13.78,0,0,0-3-1.72,15.18,15.18,0,0,0-6.35-1.15,29.08,29.08,0,0,0-3.43.3c-.57.1-1.16.19-1.72.31l-.84.19-.39.08c-.09,0-.29.08-.22,0Z"
          fill="#592d3d"
        />
        <rect
          fill="#893E97"
          height="64.15"
          width="439.24"
          x="290.23"
          y="414.02"
        />
        <path
          d="M710,667.66q-4.71,5.82-9.71,11.37C697.79,681.8,702.87,677.91,710,667.66Zm15-316.55C694.5,296.7,641.5,259.24,580.22,242l-6.35-1.71c-22.7-6.28-46.62-7-71.32-7-26.69,0-52.46,2.74-76.77,10l-4.26,1.27A283.11,283.11,0,0,0,332.67,294q-4.37,3.58-8.57,7.32c-28.34,23.69-50.34,53.69-65.47,87.9q-2.2,4.92-4.16,9.93a212.31,212.31,0,0,0-9.41,30.61C213,556.34,262.89,634,307.17,681.6c4.37,4.7-57.93-101.85-17.42-216,7.73-.29,20.24-.51,36.19-.67l15.5-50.61,17.44,50.38c27.4-.13,59.88-.15,93.88-.12l12.32-52.36L479,464.6c74.37.14,151.44.52,195.28.77l13.2-52.17,15,52.33,8.21.05C760.78,572,728.5,641.13,710,667.66A265.62,265.62,0,0,0,769.3,500C769.3,413.58,725,351.11,725,351.11Z"
          fill="#FEDC58"
        />
        <path
          d="M710,667.66q-4.71,5.82-9.71,11.37C697.79,681.8,702.87,677.91,710,667.66Zm15-316.55C694.5,296.7,641.5,259.24,580.22,242l-6.35-1.71c-22.7-6.28-46.62-7-71.32-7-26.69,0-52.46,2.74-76.77,10l-4.26,1.27A283.11,283.11,0,0,0,332.67,294q-4.37,3.58-8.57,7.32c-28.34,23.69-50.34,53.69-65.47,87.9q-2.2,4.92-4.16,9.93a212.31,212.31,0,0,0-9.41,30.61C213,556.34,262.89,634,307.17,681.6c4.37,4.7-57.93-101.85-17.42-216,7.73-.29,20.24-.51,36.19-.67l15.5-50.61,17.44,50.38c27.4-.13,59.88-.15,93.88-.12l12.32-52.36L479,464.6c74.37.14,151.44.52,195.28.77l13.2-52.17,15,52.33,8.21.05C760.78,572,728.5,641.13,710,667.66A265.62,265.62,0,0,0,769.3,500C769.3,413.58,725,351.11,725,351.11Z"
          fill="none"
          stroke="#592d3d"
          strokeMiterlimit={10}
          strokeWidth="12px"
        />
        <path
          d="M584.15,228l-6.47-1.74c-25.21-7-50.93-7.55-75.13-7.55-30.59,0-57.07,3.49-80.91,10.64l-4.26,1.27-.49.15a299.89,299.89,0,0,0-93.42,52c-3,2.46-6,5-8.84,7.55-29.63,24.82-52.93,56.11-69.24,93-1.56,3.49-3,7.05-4.42,10.57-4.18,10.69-21.29,59.77-23.75,70.65l72.53,1c7.73-.29,20.24-.51,36.19-.67l15.5-50.61,17.44,50.38c27.4-.13,59.88-.15,93.88-.12l12.32-52.36L479,464.6c74.37.14,151.44.52,195.28.77l13.2-52.17,15,52.33,8.21.05L783.8,500c0-86.19-41.3-149-46.48-156.6C706,288,651.63,247,584.15,228ZM750.31,547.25c-3.17-25.92-11.17-55.26-26.51-87.84l-3.89-8.27-6.49,0-26.78-93.63L663,450.81c-40.43-.22-107.06-.54-172.86-.69l-25.95-97.57-22.94,97.5c-27.4,0-51.55,0-72.09.09L340.6,367.53l-25.42,83c-11.45.15-20.16.34-26,.56l-9.83.38-3.29,9.26C261.72,501.22,257.92,545,264.76,591c-15.9-40-22.46-91.39-5.65-157.63l.09-.38A197.7,197.7,0,0,1,268,404.47c1.2-3.09,2.51-6.22,3.91-9.35,14.54-32.86,35.24-60.67,61.51-82.63l.33-.29c2.65-2.35,5.39-4.69,8.14-6.95a270.41,270.41,0,0,1,84-46.87l4.05-1.2c21.12-6.34,44.87-9.43,72.6-9.43,22.22,0,45.73.51,67.45,6.52l6.38,1.71c60.24,17,108.53,53.27,136,102.23l.37.66.44.63c.42.59,41.61,59.63,41.61,140.5A252.08,252.08,0,0,1,750.31,547.25Z"
          fill="#FEDC58"
        />
        <path
          d="M710,667.66q-4.71,5.82-9.71,11.37C697.79,681.8,702.87,677.91,710,667.66ZM307.17,681.6c4.37,4.7-57.93-101.85-17.42-216,7.73-.29,20.24-.51,36.19-.67l15.5-50.61,17.44,50.38c27.4-.13,59.88-.15,93.88-.12l12.32-52.36L479,464.6c74.37.14,151.44.52,195.28.77l13.2-52.17,15,52.33,8.21.05C760.78,572,728.5,641.13,710,667.66"
          fill="none"
          stroke="#592d3d"
          strokeMiterlimit={10}
          strokeWidth="12px"
        />
        <path
          d="M284.48,462.85c.18-.75.33-1.32.53-1.94s.4-1.2.62-1.78c.46-1.17,1-2.31,1.51-3.42a48.48,48.48,0,0,1,3.85-6.42,37.51,37.51,0,0,1,4.88-5.75,17,17,0,0,1,7-4,31,31,0,0,1-.87,7.68c-.28,1.14-.59,2.25-.93,3.32l-1,3.25q-1,3.23-2,6.39c-.33,1.06-.68,2.09-1,3.13-.17.51-.37,1-.56,1.53s-.39,1-.56,1.4Z"
          fill="#592d3d"
        />
        <path
          d="M710.68,459.58a35,35,0,0,1,6.23.06,60.73,60.73,0,0,1,6.24.86c1,.2,2.08.4,3.12.64a25.74,25.74,0,0,1,3.11.86,18.53,18.53,0,0,1,6.24,3.58,18.74,18.74,0,0,1-6.24,3.59,25.68,25.68,0,0,1-3.11.85c-1,.25-2.08.45-3.12.65q-3.12.58-6.24.86a35,35,0,0,1-6.23.05Z"
          fill="#592d3d"
        />
        <path
          d="M444.84,452.07a134.88,134.88,0,0,1,1.49-14.25c.72-4.7,1.6-9.37,2.61-14s2.15-9.25,3.44-13.83A132.09,132.09,0,0,1,457,396.4a131.77,131.77,0,0,1-1.5,14.25q-1.08,7.05-2.61,14t-3.44,13.83A137,137,0,0,1,444.84,452.07Z"
          fill="#ffffff"
        />
        <path
          d="M668,452.07a134.88,134.88,0,0,1,1.49-14.25q1.09-7.05,2.61-14T675.49,410a132.09,132.09,0,0,1,4.57-13.58,131.76,131.76,0,0,1-1.49,14.25q-1.1,7.05-2.61,14c-1,4.64-2.16,9.25-3.45,13.83A134.48,134.48,0,0,1,668,452.07Z"
          fill="#ffffff"
        />
        <path
          d="M237.55,468.26a143,143,0,0,1,11.42-38"
          fill="#FEDC58"
        />
        <path
          d="M231.6,467.51c.09-1,.18-1.85.32-2.73s.29-1.72.46-2.58c.35-1.7.75-3.38,1.23-5a78.48,78.48,0,0,1,3.47-9.75,66.09,66.09,0,0,1,4.7-9.22,29.18,29.18,0,0,1,7.19-7.91,50.46,50.46,0,0,1-.48,10.43c-.25,1.63-.51,3.25-.83,4.84s-.58,3.19-.83,4.78l-1.63,9.49-.83,4.68c-.12.78-.28,1.56-.42,2.32s-.3,1.57-.44,2.19Z"
          fill="#592d3d"
        />
        <path
          d="M769.33,496s-.46-20.78-8.37-47.63"
          fill="#FEDC58"
        />
        <path
          d="M763.33,496.12l-.24-2.76c-.08-1-.16-1.93-.22-2.89l-.45-5.84-.91-11.8c-.3-3.95-.71-7.91-1-11.93-.08-2-.16-4.06-.1-6.14a47.58,47.58,0,0,1,.5-6.4,42.78,42.78,0,0,1,6.58,10.89,62.13,62.13,0,0,1,2.17,5.84c.67,2,1.24,4,1.81,6a111.89,111.89,0,0,1,2.69,12.17c.33,2.05.63,4.12.81,6.21q.16,1.56.24,3.15c.06,1.07.08,2.07.07,3.28Z"
          fill="#592d3d"
        />
        <path
          d="M506.7,235.5a369.62,369.62,0,0,0-42.48,4.93c-3.48.68-7,1.42-10.44,2.06s-6.9,1.61-10.35,2.41l-10.26,2.72c-3.4,1-6.77,2.08-10.15,3.12a314.87,314.87,0,0,0-39.44,15.73,348.17,348.17,0,0,0-37.24,21,183.41,183.41,0,0,1,35.08-25.14A219.23,219.23,0,0,1,421.18,245c3.48-1,6.94-2.09,10.42-3.05s7-1.82,10.55-2.6,7.1-1.4,10.65-2,7.16-1.07,10.74-1.52A190,190,0,0,1,506.7,235.5Z"
          fill="#ffffff"
        />
        <path
          d="M255.06,519.62l13-4.4,31.2-10.54,37.6-12.7,32.49-11c5.27-1.78,10.55-3.51,15.8-5.34l.23-.07a10.6,10.6,0,0,0,6-4.6,10,10,0,0,0-3.58-13.68,10,10,0,0,0-7.71-1l-13,4.39-31.2,10.54-37.6,12.71-32.49,11c-5.27,1.78-10.55,3.52-15.8,5.34l-.23.08a10.6,10.6,0,0,0-6,4.6,10,10,0,0,0,3.58,13.68,10,10,0,0,0,7.71,1Z"
          fill="#592d3d"
        />
        <path
          d="M617.56,475l12.73,5.13,30.54,12.31,36.81,14.84,31.81,12.83c5.15,2.07,10.26,4.3,15.47,6.24l.22.08c2.25.91,5.71.16,7.71-1a10,10,0,0,0,3.58-13.69l-1.56-2a10,10,0,0,0-4.41-2.57L737.73,502l-30.54-12.32-36.81-14.84L638.57,462c-5.15-2.08-10.26-4.31-15.47-6.24l-.22-.09c-2.25-.91-5.71-.16-7.71,1a10,10,0,0,0-3.58,13.68l1.56,2a10.07,10.07,0,0,0,4.41,2.58Z"
          fill="#592d3d"
        />
      </g>
    </svg>
  </div>
  <div
    className="content"
  >
    <div
      className="header"
    >
      some-user-uid
    </div>
  </div>
</div>
`;
